--- a/Dart_Board/Dart_Board.vbproj
+++ b/Dart_Board/Dart_Board.vbproj
@@ -80,6 +80,12 @@
       <DependentUpon>Dart_board_form.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="About Form.Designer.vb">
+      <DependentUpon>About Form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="About Form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -99,6 +105,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Dart_board_form.resx">
       <DependentUpon>Dart_board_form.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="About Form.resx">
+      <DependentUpon>About Form.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
