--- a/Dart_Board/Dart_Board.vbproj
+++ b/Dart_Board/Dart_Board.vbproj
@@ -101,6 +101,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OutOfDartsPrompt.Designer.vb">
+      <DependentUpon>OutOfDartsPrompt.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OutOfDartsPrompt.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Dart_board_form.resx">
@@ -114,6 +120,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OutOfDartsPrompt.resx">
+      <DependentUpon>OutOfDartsPrompt.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
